# collapser-wfc

./: Cargo.toml  README.md
src/: lib.rs  rules.rs  tile.rs
