[package]
name = "collapser-wfc"
version = "0.1.0"
authors = ["Joshua Narayana <europajuice@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collapser = {git = "https://github.com/treetertot/collapser.git", branch = "main"}
rand = "0.8.3"